@@ -2,8 +2,8 @@ Package: PureCN
 Type: Package
 Title: Copy number calling and SNV classification using
     targeted short read sequencing
-Version: 1.23.18
-Date: 2021-08-20
+Version: 1.23.19
+Date: 2021-08-21
 Authors@R: c(person("Markus", "Riester",
                     role = c("aut", "cre"),
                     email = "markus.riester@novartis.com",
@@ -43,6 +43,7 @@ Imports:
     VGAM,
     tools,
     methods,
+    mclust,
     rhdf5,
     Matrix
 Suggests:
