@@ -139,6 +139,9 @@ importFrom(graphics,strwidth)
 importFrom(graphics,symbols)
 importFrom(graphics,text)
 importFrom(gridExtra,grid.arrange)
+importFrom(mclust,Mclust)
+importFrom(mclust,emControl)
+importFrom(mclust,mclustBIC)
 importFrom(methods,is)
 importFrom(rhdf5,H5Fopen)
 importFrom(rtracklayer,import)
